--- a/popup.html
+++ b/popup.html
@@ -15,11 +15,39 @@
       }
       #status {
         /* avoid an excessively wide status text */
-        white-space: pre;
         text-overflow: ellipsis;
         overflow: hidden;
-        max-width: 270px;
-        min-height: 300px;
+
+      }
+      #blockSite{
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+      }
+      #blockSite:focus{
+        border-color: blue;
+      }
+      #outer{
+        width: 100%;
+        text-align: center;
+      }
+      .button-style{
+        -webkit-box-shadow:rgba(0,0,0,0.0.1) 0 1px 0 0;
+        -moz-box-shadow:rgba(0,0,0,0.0.1) 0 1px 0 0;
+        box-shadow:rgba(0,0,0,0.0.1) 0 1px 0 0;
+        background-color:#5B74A8;
+        border:1px solid #29447E;
+        font-family:'Lucida Grande',Tahoma,Verdana,Arial,sans-serif;
+        font-size:15px;
+        font-weight:700;
+        padding:2px 6px;
+        color:#fff;
+        border-radius:5px;
+        -moz-border-radius:5px;
+        -webkit-border-radius:5px;
+        cursor: pointer;
+      }
+      .inner{
+        display: inline-block;
       }
     </style>
 
@@ -33,20 +61,20 @@
   </head>
   <body>
     <div id="status">
-      <form id="addSite">
-        <p><label>Enter the site to block then press enter: </label>
-        <input name="blockWebsite" type="text" value="" id="blockSite" size="40" placeholder="block this site"></input></p>
-        <input type="button" id="blockNow" value="Block"></input>
-        <input type="button" id="unblockNow" value=""></input>
-      </form>
+      <div id="addSite">
+        <form>
+          <p><label>Block this site: </label>
+          <input name="blockWebsite" type="text" value="" id="blockSite" size="40" placeholder="block this site"></input></p>
+        </form>
+      </div>
+        <div id="outer">
+          <div class="inner"><input type="submit" class="button-style" id="blockNow" value="Block"></div>
+        </div>
       <p>Websites blocked</p>
-      <p id="p0"></p>
-      <p id="p1"></p>
-      <p id="p2"></p>
-      <p id="p3"></p>
-      <p id="p4"></p>
-      <p id="p5"></p>
-
+      <ul id="blockList">
+      </ul>
+      
+      <div class="inner"><input type="submit" class="button-style" id="unblockNow" value="Unblock All"></div>
     </div>
   </body>
 </html>
