--- a/popup.html
+++ b/popup.html
@@ -115,6 +115,9 @@
         <form>
           <p id="title"><label>Pokus NOW: </label>
           <input name="blockWebsite" type="text" value="" id="blockSite" size="40" placeholder="block this site"></input></p>
+          <div id="direct">
+            <p><label>Please click 'block' to block a site</label></p>
+          </div>
         </form>
       </div>
         <div id="outer">
