--- a/popup.html
+++ b/popup.html
@@ -114,9 +114,9 @@
       <div id="addSite">
         <form>
           <p id="title"><label>Pokus NOW: </label>
-          <input name="blockWebsite" type="text" value="" id="blockSite" size="40" placeholder="block this site"></input></p>
+          <input name="blockWebsite" type="text" value="" id="blockSite" size="40" maxlength="30" placeholder="block this site"></input></p>
           <div id="direct">
-            <p><label>Please click 'block' to block a site</label></p>
+            <p><label>Enter website url, without 'www', then click block.</label></p>
           </div>
         </form>
       </div>
@@ -127,7 +127,7 @@
 
       <table>
         <tr>
-          <th>Website url</th>
+          <th>Website URL |</th>
           <th>Status</th>
         </tr>
         <tr>
