--- a/popup.html
+++ b/popup.html
@@ -127,7 +127,7 @@
 
       <table>
         <tr>
-          <th>Website URL |</th>
+          <th>Website URL <span style="color: red">|</span></th>
           <th>Status</th>
         </tr>
         <tr>
@@ -149,6 +149,26 @@
         <tr>
           <td id="site4"></td>
           <td id="unblock-4" class="unblock-button hide"><button>Unblock</button></td>
+        </tr>
+        <tr>
+          <td id="site5"></td>
+          <td id="unblock-5" class="unblock-button hide"><button>Unblock</button></td>
+        </tr>
+        <tr>
+          <td id="site6"></td>
+          <td id="unblock-6" class="unblock-button hide"><button>Unblock</button></td>
+        </tr>
+        <tr>
+          <td id="site7"></td>
+          <td id="unblock-7" class="unblock-button hide"><button>Unblock</button></td>
+        </tr>
+        <tr>
+          <td id="site8"></td>
+          <td id="unblock-8" class="unblock-button hide"><button>Unblock</button></td>
+        </tr>
+        <tr>
+          <td id="site9"></td>
+          <td id="unblock-9" class="unblock-button hide"><button>Unblock</button></td>
         </tr>
       </table>
       <!--
