--- a/popup.html
+++ b/popup.html
@@ -93,6 +93,12 @@
       .hide{
         display: none;
       }
+      tr, th{
+        padding-right: 50px;
+      }
+      th{
+        border-bottom: 1px solid black;
+      }
     </style>
 
     <!--
@@ -127,7 +133,7 @@
 
       <table>
         <tr>
-          <th>Website URL <span style="color: red">|</span></th>
+          <th style="border-right: 1px solid red">Website URL</th>
           <th>Status</th>
         </tr>
         <tr>
@@ -159,22 +165,6 @@
           <td id="unblock-6" class="unblock-button hide"><button>Unblock</button></td>
         </tr>
       </table>
-      <!--
-      <ul id="blockList">
-        <li id="site0"></li>
-        <li id="unblock-button0"><button>Unblock</button></li>
-        <li id="site1"></li>
-        <li id="unblock-button1"><button>Unblock</button></li>
-        <li id="site2"></li>
-        <li id="unblock-button2"><button>Unblock</button></li>
-        <li id="site3"></li>
-        <li id="unblock-button3"><button>Unblock</button></li>
-        <li id="site4"></li>
-        <li id="unblock-button4"><button>Unblock</button></li>
-        <li id="site5"></li>
-        <li id="unblock-button5"><button>Unblock</button></li>
-      </ul>
-      -->
       <p id="perm-title">Permanently blocked websites</p>
       <ul id="permbanned">
       </ul>
