--- a/popup.html
+++ b/popup.html
@@ -192,6 +192,18 @@
           <td id="site6"></td>
           <td id="unblock-6" class="unblock-button hide"><button>Unblock</button></td>
         </tr>
+        <tr>
+          <td id="site7"></td>
+          <td id="unblock-7" class="unblock-button hide"><button>Unblock</button></td>
+        </tr>
+        <tr>
+          <td id="site8"></td>
+          <td id="unblock-8" class="unblock-button hide"><button>Unblock</button></td>
+        </tr>
+        <tr>
+          <td id="site9"></td>
+          <td id="unblock-9" class="unblock-button hide"><button>Unblock</button></td>
+        </tr>
       </table>
 
       <div class="inner"><input type="submit" class="button-style" id="unblockAll" value="Unblock All"></div>
